cabal-version:      3.0
name:               cardinality-tf
version:            0.1.0.0
synopsis:           Type-level cardinality computation using type families
description:
  A library for computing the cardinality (number of inhabitants) of Haskell types at the type level using type families.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Mrjt Jmn
maintainer:         meritamen@sdf.org
category:           Type Programming
build-type:         Simple
tested-with:        GHC==9.8.2, GHC==9.6.4, GHC==9.4.8

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Cardinality
    other-modules:    Cardinality.Internal
                    , Cardinality.TH
    build-depends:    base >=4.17.2.0 && < 5
                    , template-haskell >=2.19.0.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite cardinality-tf-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base >=4.17.2.0 && < 5
                    , cardinality-tf
                    , hspec
